Fix line break in resume

--- a/default.css
+++ b/default.css
@@ -82,6 +82,7 @@ a:hover
   	text-align: center;
 	line-height: 200%;
 	width: 100%;
+	font-size: min(3.0vmax, 36px);
 }
 
 #connect ul
